<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dp"
            android:textStyle="bold"
            android:textColor="@color/purple_dark"
            android:text="Cotação:"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:textSize="24dp"
                android:text="De:"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/spinnerBackgroundColor"
                android:paddingStart="8dp"
                android:textSize="24dp"
                android:textStyle="bold"
                android:minWidth="150dp"
                android:id="@+id/spFrom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:textSize="24dp"
                android:text="Para:"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/spinnerBackgroundColor"
                android:paddingStart="8dp"
                android:textSize="24dp"
                android:textStyle="bold"
                android:minWidth="150dp"
                android:id="@+id/spTo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="Valor a converter:"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="1"
                android:textSize="24dp"
                android:minWidth="100dp"
                android:paddingEnd="32dp"
                android:maxLength="7"
                android:id="@+id/edtValueFrom"/>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Conversão"
            android:textSize="24dp"
            android:id="@+id/btConverter"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="Valor da conversão:"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textStyle="bold"
                android:id="@+id/txtResult"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:textStyle="bold"
                android:id="@+id/txtDateConverter"/>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info01"
                android:textStyle="bold"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info02"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info03"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info04"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info05"
                android:textSize="12dp"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>